# EVE_VelesEyes

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEV_NOTES.md  LICENSE  PACKAGE_INFO.md  QUICKSTART.md  README.md  RECORDING_SCRIPT.md  WHATS_NEW.md  argus-overview.desktop  argus-overview.spec  build-appimage.sh  eve-overview-pro.sh  eve-veles-eyes.desktop  install.sh  pyproject.toml  requirements.txt  run.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-tag.yml  build-linux.yml  build-windows.yml  ci.yml  dependabot-auto-merge.yml  release.yml
benchmarks/: benchmark_core.py
docs/: ARCHITECTURE.md  FORUM_POST.md  REDDIT_LAUNCH.md  SCREENSHOT_INSTRUCTIONS.md  USER_GUIDE.md
flatpak/: io.github.aretedriver.ArgusOverview.metainfo.xml  io.github.aretedriver.ArgusOverview.yml  io.github.aretedriver.VelesEyes.yml
src/: main.py
src/argus_overview/core/: character_manager.py  layout_manager.py
src/argus_overview/ui/: characters_teams_tab.py  hotkeys_tab.py  main_tab.py  main_window_v21.py  menu_builder.py  settings_sync_tab.py  settings_tab.py
src/eve_overview_pro/: __init__.py
src/eve_overview_pro/core/: alert_detector.py  character_manager.py  config_watcher.py  discovery.py  eve_settings_sync.py  hotkey_manager.py  layout_manager.py  position.py  window_capture_threaded.py
src/eve_overview_pro/ui/: __init__.py  about_dialog.py  action_registry.py  characters_teams_tab.py  hotkeys_tab.py  layouts_tab.py  main_tab.py  main_window_v21.py  (+6 more)
tests/: __init__.py  test_action_registry.py  test_alert_detector.py  test_character_manager.py  test_characters_teams_tab.py  test_discovery.py  test_eve_settings_sync.py  test_hotkey_edit.py  test_hotkeys_tab.py  test_layout_manager.py  test_layouts_tab.py  test_main_tab.py  test_main_window_v21.py  test_menu_builder.py  test_position.py  test_screen.py  test_settings_manager.py  test_settings_sync_tab.py  test_settings_tab.py  test_tray.py  test_utils.py  test_window_capture_threaded.py
windows/: README_WINDOWS.md  build.bat  build.spec  requirements.txt
windows/src/: main.py
(+18 files in other folders)
